force-app/main/default/objects/LLC_BI__DocClass__c/LLC_BI__DocClass__c.object-meta.xml
<CustomObject>
    <label>DocClass</label>
    <nameField>
        <label>DocClass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocClass</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>