force-app/main/default/objects/LLC_BI__DocClass__c/fields/LLC_BI__docManager__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required, but an admin must populate it with some value. This field provides the ID of the associated DocManager record for a given DocClass (placeholder).</description>
    <label>DocManager</label>
    <referenceTo>LLC_BI__DocManager__c</referenceTo>
    <relationshipLabel>DocClass</relationshipLabel>
    <relationshipName>DocClass</relationshipName>
    <type>Lookup</type>
</CustomField>