force-app/main/default/objects/LLC_BI__DocClass__c/fields/LLC_BI__DocOwner__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DocOwner__c</fullName>
    <description>This field is optional and allows the user to set the owner of a document in classic Document Manager.</description>
    <label>DocOwner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Ops</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Closer</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>