force-app/main/default/objects/LLC_BI__DocClass__c/fields/LLC_BI__lookupId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is not currently used.</description>
    <externalId>true</externalId>
    <label>lookupId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>